# neo-re

./: .gitignore  AGENTS.md  README.md  agent-work-log.md  hypotheses.tsv  work-till.md
alpha-cli/: Cargo.toml  GUI_STRUCTURE.md  README.md
alpha-cli/src/: android_storage.rs  app.rs  backup.rs  gui.rs  gui_about.rs  gui_applets.rs  gui_connection.rs  gui_dashboard.rs  gui_model.rs  gui_os.rs  lib.rs  main.rs  operation_progress.rs  protocol.rs  ui.rs  ui_render.rs  usb.rs  usb_android.rs  usb_support.rs
alpha-cli/src/usb_android/: jni_bridge.rs
alpha-core/: Cargo.toml
alpha-core/src/: applet_workflow.rs  backup.rs  bundled_assets.rs  lib.rs  neo_client.rs  protocol.rs  usb.rs  usb_support.rs
alpha-core/src/usb_android/: jni_bridge.rs
alpha-emu/: Cargo.toml  README.md
alpha-emu/src/: applet_host.rs  applet_runner.rs  cpu68k.rs  domain.rs  firmware.rs  firmware_session.rs  gui.rs  keyboard.rs  lcd.rs  lib.rs  main.rs  memory.rs  neo_os.rs  neo_system.rs  os3kapp.rs  os_shims.rs  recovery_seed.rs  text_screen.rs
alpha-gui-tauri/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
alpha-gui-tauri/src/: App.tsx
alpha-gui-tauri/src-tauri/: Cargo.toml  tauri.conf.json
alpha-gui-tauri/src-tauri/capabilities/: default.json
alpha-gui-tauri/src-tauri/icons/: icon.icns
alpha-gui-tauri/src-tauri/src/: android_saf.rs  commands.rs  lib.rs  main.rs  types.rs
alpha-gui-tauri/src/api/: applets.ts  backupSettings.ts  commands.ts  progress.ts  types.ts
alpha-gui-tauri/src/styles/: tailwind.css
alpha-usb-rust/: Cargo.toml  README.md  build.rs
alpha-usb-rust/src/: alpha_usb.rs  applets.rs  cli.rs  compiler.rs  lib.rs  main.rs  os3kapp.rs  sdk.rs
alpha-usb-rust/src/applets/: alpha_usb.rs  mod.rs
aplha-rust-native/: Cargo.toml  README.md  build.sh
aplha-rust-native/.cargo/: config.toml
aplha-rust-native/applets/alpha_usb/: Cargo.toml  build.rs
aplha-rust-native/applets/alpha_usb/src/: entry.s  lib.rs  main.rs
aplha-rust-native/applets/basic_writer/: Cargo.toml
aplha-rust-native/applets/basic_writer/src/: editor.rs  main.rs  storage.rs
aplha-rust-native/applets/forth_mini/: Cargo.toml  memory.x
aplha-rust-native/applets/forth_mini/src/: forth.rs  main.rs
aplha-rust-native/crates/alpha-neo-pack/: Cargo.toml
aplha-rust-native/crates/alpha-neo-pack/src/: elf.rs  main.rs  os3kapp.rs
aplha-rust-native/crates/alpha-neo-sdk/: Cargo.toml
aplha-rust-native/crates/alpha-neo-sdk/src/: abi.rs  context.rs  display.rs  keyboard.rs  lib.rs  runtime.rs  usb.rs
aplha-rust-native/scripts/: audit-m68k-registers.sh
docs/: 2026-03-31-alphaword-get-print-dataflow.md  2026-03-31-alphaword-send-dataflow.md  2026-03-31-direct-usb-driver-notes.md  2026-03-31-initial-recon.md  2026-03-31-smartapplets-dataflow.md  2026-04-18-neo-recovery-runbook.md  2026-04-20-alpha-emu-memory-map.md  2026-04-21-keyboard-hid-wip.md  2026-04-21-keyboard-matrix-map.md  2026-04-22-alpha-emu-headless-usage.md  2026-04-24-keyboard-layout-findings.md  2026-04-29-basic-writer-alphaword-findings.md  2026-04-30-forth-mini-persistence-findings.md  2026-05-01-write-or-die-findings.md
docs/superpowers/plans/: 2026-04-20-alpha-emu-implementation.md  2026-04-20-forth-mini-native-applet.md  2026-04-20-native-m68k-rust-applet-sdk.md  2026-04-24-forth-mini-redesign.md  2026-04-24-keyboard-layout-patcher.md  2026-04-25-alpha-gui-tabbed-manager.md  2026-04-27-alpha-gui-tauri-react-rewrite.md  2026-04-29-alpha-gui-os-recovery-operations.md  2026-04-29-basic-writer-smartapplet.md  2026-05-01-write-or-die-smartapplet.md
layout-patcher/: README.md  pyproject.toml
layout-patcher/src/layout_patcher/: cli.py  firmware.py  layouts.py
layout-patcher/tests/: test_firmware.py  test_layout_patcher_cli.py  test_patch_integration.py
poc/neotools/: pyproject.toml
poc/neotools/src/neotools/: __init__.py  alphaword_attributes.py  alphaword_flow.py  alphaword_get_print.py  alphaword_send.py  alphaword_session.py  alphaword_transfer.py  alphawordplus_codec.py  alphawordplus_runtime.py  asusbcomm.py  driver64_model.py  os3kapp_format.py  os3kapp_runtime.py  read_staging.py  smartapplets.py  switch_packets.py  updater_packets.py  updater_responses.py  usb_descriptor.py
poc/neotools/tests/: test_alphaword_attributes.py  test_alphaword_flow.py  test_alphaword_get_print.py  test_alphaword_send.py  test_alphaword_session.py  test_alphaword_transfer.py  test_alphawordplus_codec.py  test_alphawordplus_runtime.py  test_asusbcomm.py  test_cli.py  test_cli_alphaword_get_print.py  test_cli_alphaword_send.py  test_cli_alphaword_session.py  test_cli_decode.py  test_cli_direct_usb_plan.py  test_cli_smartapplets.py  test_cli_updater_packet.py  test_driver64_model.py  test_os3kapp_format.py  test_os3kapp_runtime.py  test_read_staging.py  test_smartapplets.py  test_switch_packets.py  test_updater_packets.py  test_updater_responses.py  test_usb_descriptor.py
real-check/: README.md  pyproject.toml
real-check/src/real_check/: __init__.py  client.py  hid_switch.py  live_usb.py  usb_select.py
real-check/tests/: test_cli.py  test_client.py  test_hid_switch.py  test_live_usb.py  test_usb_select.py
scripts/: build-smartapplet.sh
smartapplets/: .gitignore  README.md
smartapplets/basic_writer_bw/: BasicWriterBW.c  Makefile  applet.env
smartapplets/betawise-sdk/: alphaword_export.c  alphaword_export.h  applet.h  challenge_timer.c  challenge_timer.h  file_store.c  file_store.h  os3k.h  screen_lines.c  screen_lines.h  version.h
smartapplets/floppy_bird_bw/: FloppyBirdBW.c  FloppyBirdBW.lds  Makefile  applet.env  draw_text.c  draw_text.h  game.c  game.h
smartapplets/forth_mini_bw/: ForthMiniBW.c  Makefile  app_state.h  app_storage.c  app_storage.h  app_ui.c  applet.env
smartapplets/snake_bw/: Makefile  SnakeBW.c  applet.env  draw.c  draw.h  game.c  game.h
smartapplets/write_or_die_bw/: Makefile  WriteOrDieBW.c  alpha_export.c  alpha_export.h  app_state.h  applet.env  challenge.c  challenge.h  editor.c  editor.h  storage.c  storage.h  ui.c  ui.h
(+36 files in other folders)
