[package]
name = "alpha-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
crossterm = "0.29.0"
directories = "6.0.0"
eframe = { version = "0.34.1", default-features = false, features = ["default_fonts", "glow", "wayland", "x11", "android-native-activity"] }
ratatui = "0.30.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
rusb = "0.9.4"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22.4"
ndk-context = "0.1.1"
