[package]
name = "alpha-cli"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
crossterm = "0.29.0"
directories = "6.0.0"
eframe = { version = "0.34.1", default-features = false, features = ["default_fonts", "glow", "wayland", "x11", "android-native-activity"] }
ratatui = "0.30.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
rusb = "0.9.4"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = "0.6.1"
jni = "0.22.4"
ndk-context = "0.1.1"
tracing-android = "0.2.0"

[package.metadata.android]
package = "cz.jakubkolcar.alpha_cli"
build_targets = ["aarch64-linux-android"]
apk_name = "alpha-gui"

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 35

[[package.metadata.android.uses_feature]]
name = "android.hardware.usb.host"
required = true

[[package.metadata.android.uses_permission]]
name = "android.permission.MANAGE_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"
max_sdk_version = 29

[package.metadata.android.application]
label = "Alpha GUI"
theme = "@android:style/Theme.DeviceDefault.NoActionBar"

[package.metadata.android.application.activity]
config_changes = "orientation|keyboardHidden|screenSize"
label = "Alpha GUI"
exported = true
