[package]
name = "alpha-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
directories = "6.0.0"
serde = { version = "1", features = ["derive"] }
tracing = "0.1.44"

[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
rusb = "0.9.4"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22.4"
ndk-context = "0.1.1"
tracing-android = "0.2.0"
