[package]
name = "alpha-emu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
eframe = { version = "0.34.1", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
m68000 = "0.2.3"
rfd = "0.15.4"
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[profile.dev]
opt-level = 2
