[project]
name = "layout-patcher"
version = "0.1.0"
description = "Precise AlphaSmart NEO OS keyboard layout patcher"
authors = [
    { name = "Jakub Kolcar", email = "j.kolcar@raynet.cz" }
]
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.2",
]

[project.scripts]
layout-patcher = "layout_patcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/layout_patcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
